# Kedro_Healthcare_Pipeline

./: 2.0.0  README.md  pyproject.toml
conf/base/: catalog.yml  parameters.yml
src/century_new_pipeline/: __init__.py  __main__.py  settings.py
src/century_new_pipeline/pipelines/data_processing/: nodes.py  pipeline.py
